mejorando el nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,8 @@ server {
                 https://*.cesium.com;
             worker-src 'self' blob:;
             child-src 'self' blob:;
-        ";
+        " always;
+
         try_files $uri /index.html;
     }
 }
