--- a/nginx.conf
+++ b/nginx.conf
@@ -6,32 +6,25 @@ server {
     index index.html;
 
     location / {
+        # Cabeceras CSP necesarias para CesiumJS
         add_header Content-Security-Policy "
             default-src 'self';
-            script-src 'self' 'unsafe-eval' 'unsafe-inline'
-                https://cesium.com
-                https://*.cesium.com
-                https://cdn.jsdelivr.net
-                https://unpkg.com;
-            style-src 'self' 'unsafe-inline'
-                https://cesium.com
-                https://*.cesium.com
-                https://fonts.googleapis.com
-                https://cdn.jsdelivr.net;
-            font-src 'self' data:
-                https://fonts.gstatic.com
-                https://cesium.com
-                https://*.cesium.com;
-            img-src 'self' data: blob:
-                https://cesium.com
-                https://*.cesium.com;
-            connect-src 'self'
-                https://cesium.com
-                https://*.cesium.com;
+            script-src 'self' 'unsafe-eval' 'unsafe-inline' https:;
+            style-src 'self' 'unsafe-inline' https:;
+            font-src 'self' data: https:;
+            img-src 'self' data: blob: https:;
+            connect-src 'self' https:;
             worker-src 'self' blob:;
             child-src 'self' blob:;
         " always;
 
         try_files $uri /index.html;
+    }
+
+    # Archivos estáticos (CSS, JS, imágenes, fuentes)
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|mp4|webm)$ {
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public";
     }
 }
