--- a/nginx.conf
+++ b/nginx.conf
@@ -6,14 +6,14 @@ server {
     index index.html;
 
     location / {
-        # Cabeceras CSP necesarias para CesiumJS
+        # Cabeceras CSP completas para CesiumJS y todos los recursos
         add_header Content-Security-Policy "
             default-src 'self';
-            script-src 'self' 'unsafe-eval' 'unsafe-inline' https:;
-            style-src 'self' 'unsafe-inline' https:;
-            font-src 'self' data: https:;
-            img-src 'self' data: blob: https:;
-            connect-src 'self' https:;
+            script-src 'self' 'unsafe-eval' 'unsafe-inline' https://cesium.com https://*.cesium.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com https:;
+            style-src 'self' 'unsafe-inline' https://cesium.com https://*.cesium.com https://fonts.googleapis.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com https:;
+            font-src 'self' data: https://fonts.gstatic.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com https:;
+            img-src 'self' data: blob: https://cesium.com https://*.cesium.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com https:;
+            connect-src 'self' https://cesium.com https://*.cesium.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com https:;
             worker-src 'self' blob:;
             child-src 'self' blob:;
         " always;
