--- a/nginx.conf
+++ b/nginx.conf
@@ -2,27 +2,18 @@ server {
     listen 8080;
     server_name _;
 
-    root /public;
+    root /usr/share/nginx/html;
     index index.html;
 
+    # CABECERA CSP CRÍTICA PARA CESIUM
+    add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'unsafe-inline' https: data: blob:; style-src 'self' 'unsafe-inline' https: data:; font-src 'self' https: data:; img-src 'self' https: data: blob:; connect-src 'self' https: data: blob:; worker-src 'self' blob:; child-src 'self' blob: data:; object-src 'none';" always;
+    
     location / {
-        # Cabeceras CSP completas para CesiumJS y todos los recursos
-        add_header Content-Security-Policy "
-            default-src 'self';
-            script-src 'self' 'unsafe-eval' 'unsafe-inline' https://cesium.com https://*.cesium.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com https:;
-            style-src 'self' 'unsafe-inline' https://cesium.com https://*.cesium.com https://fonts.googleapis.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com https:;
-            font-src 'self' data: https://fonts.gstatic.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com https:;
-            img-src 'self' data: blob: https://cesium.com https://*.cesium.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com https:;
-            connect-src 'self' https://cesium.com https://*.cesium.com https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com https:;
-            worker-src 'self' blob:;
-            child-src 'self' blob:;
-        " always;
-
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # Archivos estáticos (CSS, JS, imágenes, fuentes)
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|mp4|webm)$ {
+    # Archivos estáticos
+    location ~* \.(ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|mp4|webm)$ {
         expires 6M;
         access_log off;
         add_header Cache-Control "public";
