--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,19 @@
 server {
     listen 8080;
     server_name _;
-
-    root /usr/share/nginx/html;
+    root /public;
     index index.html;
 
-    # CABECERA CSP CRÍTICA PARA CESIUM
-    add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'unsafe-inline' https: data: blob:; style-src 'self' 'unsafe-inline' https: data:; font-src 'self' https: data:; img-src 'self' https: data: blob:; connect-src 'self' https: data: blob:; worker-src 'self' blob:; child-src 'self' blob: data:; object-src 'none';" always;
-    
+    # CSP simplificado pero completo para CesiumJS
+    add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; font-src 'self' https: data:; img-src 'self' https: data: blob:; connect-src 'self' https:; worker-src 'self' blob:; child-src 'self' blob:;" always;
+
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Archivos estáticos
-    location ~* \.(ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|mp4|webm)$ {
-        expires 6M;
-        access_log off;
-        add_header Cache-Control "public";
+    # Cache para archivos estáticos
+    location ~* \.(css|js|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 }
