--- a/nginx.conf
+++ b/nginx.conf
@@ -1,41 +1,16 @@
 server {
-    listen       ${PORT};
-    server_name  _;
-
+    listen 8080;
+    server_name _;
     root /public;
     index index.html;
 
     location / {
-        add_header Content-Security-Policy "
-            default-src 'self';
-            script-src 'self' 'unsafe-inline' 'unsafe-eval'
-                https://cesium.com
-                https://*.cesium.com
-                https://cdn.jsdelivr.net
-                https://unpkg.com
-                https://cdnjs.cloudflare.com;
-            style-src 'self' 'unsafe-inline'
-                https://fonts.googleapis.com
-                https://cdn.jsdelivr.net
-                https://unpkg.com
-                https://cesium.com
-                https://*.cesium.com;
-            font-src 'self' data:
-                https://fonts.gstatic.com
-                https://cdn.jsdelivr.net
-                https://cesium.com
-                https://*.cesium.com;
-            img-src 'self' data: blob:
-                https://cdn.jsdelivr.net
-                https://cesium.com
-                https://*.cesium.com;
-            connect-src 'self'
-                https://cesium.com
-                https://*.cesium.com
-                https://cdn.jsdelivr.net;
-            worker-src 'self' blob:;
-            child-src 'self' blob:;
-        ";
-        try_files $uri /index.html;
+        add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; font-src 'self' https: data:; img-src 'self' https: data: blob:; connect-src 'self' https:; worker-src 'self' blob:; child-src 'self' blob:;" always;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location ~* \.(css|js|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 }
