agregando docke y configurando

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,13 @@
 server {
-    listen 8080;
-    server_name _;
-    root /public;
-    index index.html;
-
+    listen 80;
+    server_name localhost;
+    
     location / {
-        add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; font-src 'self' https: data:; img-src 'self' https: data: blob:; connect-src 'self' https:; worker-src 'self' blob:; child-src 'self' blob:;" always;
+        root /usr/share/nginx/html;
+        index index.html index.htm;
         try_files $uri $uri/ /index.html;
-    }
-
-    location ~* \.(css|js|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+        
+        # CSP básico para CesiumJS
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' data: https:; connect-src 'self' https:; worker-src 'self' blob:; child-src 'self' blob:;" always;
     }
 }
